# bark_rs

./: Cargo.toml  README.md
examples/: async_client.rs  batch_push.rs  error_handling.rs  message_builder.rs  mixed_usage.rs  sync_client.rs
src/: async_client.rs  lib.rs  message.rs  sync_client.rs
