[package]
name = "bark_rs"
version = "0.1.1"
edition = "2024"
authors = ["chiyizi <ch1y1z1@users.noreply.github.com>"]
description = "A feature-complete Rust client library for Bark push notification service with modular architecture"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/ch1y1z1/bark_rs"
homepage = "https://github.com/ch1y1z1/bark_rs"
documentation = "https://docs.rs/bark_rs"
keywords = ["bark", "push", "notification", "ios", "client"]
categories = ["api-bindings", "network-programming"]
rust-version = "1.85"

[dependencies]
reqwest = { version = "0.12.23", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = [
    "rt",
    "rt-multi-thread",
    "macros",
], optional = true }

[features]
default = []
async = ["tokio"]
